--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   <footer>
     <div class="wrap">
-      © <span id="footer-name">Macé</span>
+      © <span id="footer-name">Macé</span> 2026
     </div>
   </footer>
 
