--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- Header -->
   <header>
     <div class="wrap header-content">
-      <span id="header-name">Dima Maltsev · Macé</span>
+      <span id="header-name">Dima Malсev · Macé</span>
     </div>
   </header>
 
