--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="p:domain_verify" content="7eff1141d385846b043cf9ca48e43415"/>
   <meta name="theme-color" content="#ffffff" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="theme-color" content="#eef1f6">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
   <!-- Google Tag Manager -->
   <script>
